--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,10 @@ install:
 script:
     - flake8 .
     - python3 -m unittest discover
+
+notifications:
+  email:
+    recipients:
+        - agilis@sch.bme.hu
+    on_success: change
+    on_failure: always
