--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ python:
 
 install:
     - pip install -r requirements.txt
-    - pip install flake8
+    - pip install flake8 coverage
 
 script:
     - flake8 .
-    - python3 -m unittest discover
+    - coverage run -m unittest discover
+    - coverage report -m
 
 notifications:
   email:
